Fixed with a link the leap motion project.

--- a/index.html
+++ b/index.html
@@ -6,39 +6,39 @@
   	<title>Nick Strayer's Silly Website</title>
   	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   	<link rel="stylesheet" type="text/css" href="myStyle.css">
-  
+
   </head>
   <body>
 
 <div id = "bigWrapper">
-<!-- ---------------------------------------------------------------------------------  -->		
+<!-- ---------------------------------------------------------------------------------  -->
 <div id = "menuSelection">
 </div>
 
 <div id = "menuBar">
 </div>
 
-<!-- ---------------------------------------------------------------------------------  -->		
+<!-- ---------------------------------------------------------------------------------  -->
 <div id="meDiv" class="sectionDivs">
-        <p class = "header"> hello! </p> 
-        <p class = "pictures"> 
-        <img src = "me.jpg" alt = "I am a super serious person" height = "200px" width = "250px">	
+        <p class = "header"> hello! </p>
+        <p class = "pictures">
+        <img src = "me.jpg" alt = "I am a super serious person" height = "200px" width = "250px">
         <img src = "bikes.jpg" alt = "Biking down the coast of California" height = "200px" width = "250px">
-        <img src = "billings.jpg" alt = "Billings Library, UVM" height = "200px" width = "250px">	
+        <img src = "billings.jpg" alt = "Billings Library, UVM" height = "200px" width = "250px">
 		</p>
-        <p>I am a senior at the <em>University of Vermont</em> majoring in <strong>mathematics</strong> and <strong>statistics</strong> and minoring in <strong>computer science.</strong> 
+        <p>I am a senior at the <em>University of Vermont</em> majoring in <strong>mathematics</strong> and <strong>statistics</strong> and minoring in <strong>computer science.</strong>
         </p>
         <p>My interests lie in the utilization of the incredible power that modern <strong>data</strong> affords us to help better the world.</p>
 		<p>I don't think that one should need a degree in a STEM field to be able to benefit from this data. Due to this, one of my main interests is visualizing data to accurately reflect the underlying trends without all of the fluff that data scientists love to layer on.</p>
 		<p>When I am not in "school mode" I love to bike places and appreciate architecture whilst doing so.</p>
 		<p>Have a fantastic day!</p>
 </div>
-	
-	
-<!-- ---------------------------------------------------------------------------------  -->		
+
+
+<!-- ---------------------------------------------------------------------------------  -->
 <div id="resumeDiv" class = "hidden sectionDivs" >
-		
-	<p class = "header"> resume </p> 
+
+	<p class = "header"> resume </p>
 
 	<h1>Nicholas James Strayer:</h1>
 	<hr>
@@ -55,7 +55,7 @@
 	</ul>
 
 
-	</div> 
+	</div>
 	<hr>
 	<h3 class = "resumeSections">Experience:</h3>
 
@@ -129,7 +129,7 @@
 	<li>Responsible for design and implementation of $20,000+ budget.</li>
 	</ul>
 	</li>
-	</ul> 
+	</ul>
 
 
 	</div> <!-- Break of experience subdiv -->
@@ -189,25 +189,26 @@
 
 	</div>  <!-- closes the menu div -->
 </div> <!-- closes the resume div -->
-	
-	
-<!-- ---------------------------------------------------------------------------------  -->	
+
+
+<!-- ---------------------------------------------------------------------------------  -->
 <div id="projectsDiv" class="hidden sectionDivs">
 
-    <p class = "header"> projects </p> 
+    <p class = "header"> projects </p>
 
     <table class = "projectsTable" style="width:100%">
     	<tr>
     		<td>
-    			<a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"><img src = "projectPics/leap.jpg" alt = "Leap Motion Project" width = "80%"></a>
+    			<!-- <a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"><img src = "projectPics/leap.jpg" alt = "Leap Motion Project" width = "80%"></a> -->
+             <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe>
     		</td>
     		<td>
     			<p>  <a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"> Experimental Leap Motion + D3.js project. </a>
-		        	<ul> 
+		        	<ul>
 		        		<li>Wave your hands around and watch D3.js mirror you!</li>
 		        		<li>In the future I plan on implementing ways to interact with D3 visualizations by recognizing gestures using machine learning algorithms.</li>
+                  <!-- <li><a href= "https://www.youtube.com/watch?v=yttEEA-Gd2A">Video of it in action</a> for if you don't have a Leap.</li> -->
 		        		<li><strong>Note:</strong> When using, start by waving your hands around above the Leap Motion device and watch it calibrate!</li>
-		        		<li><strong>Note #2:</strong> You will need a <a href = "https://www.leapmotion.com/" target="_blank">Leap Motion</a> device to enjoy this :(</li>
 		        	</ul>
 	        	</p>
     		</td>
@@ -268,7 +269,7 @@
     			<a href = "http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank"><img src = "projectPics/labInTheWild.jpg" alt = "Lab In The Wild Project" width = "80%"></a>
     		</td>
     		<td>
-			    <p> <a href = "http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank"> labinthewild.org Interactive Visualization. </a> 
+			    <p> <a href = "http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank"> labinthewild.org Interactive Visualization. </a>
 			        <ul> <li>A visualization developed for LabInTheWild at the University of Michigan to help participants place themselves among differing demographics.</li>
 			        </ul>
 		        </p>
@@ -278,29 +279,29 @@
 
 
 </div>
-	
-	
-<!-- ---------------------------------------------------------------------------------  -->	
+
+
+<!-- ---------------------------------------------------------------------------------  -->
 <div id="contactDiv" class="hidden sectionDivs">
-        <p class = "header"> contact </p> 
+        <p class = "header"> contact </p>
         <p> I am always interested in getting involved in new projects or just connecting with others. Feel free to get in touch!
         </p>
-        <p> <strong>email: </strong> nstrayer (at) uvm.edu 
+        <p> <strong>email: </strong> nstrayer (at) uvm.edu
         </p>
         <p> <strong>twitter: </strong> <a href = "https://twitter.com/NicholasStrayer" target="_blank">@NicholasStrayer </a>
         </p>
         <p> <strong>github: </strong> <a href = "https://github.com/nstrayer" target="_blank">nstrayer </a>
         </p>
-		<p class = "pictures"> 
+		<p class = "pictures">
 		<img src = "rubeLab.jpg" alt = "The Rubenstein Ecosystem Science Laboratory" height = "200px" width = "300px">
-		<img src = "bezierCurve.jpg" alt = "I am a super serious person" height = "200px" width = "200px">	
-		<img src = "lawQuad.jpg" alt = "I am a super serious person" height = "200px" width = "250px">			
+		<img src = "bezierCurve.jpg" alt = "I am a super serious person" height = "200px" width = "200px">
+		<img src = "lawQuad.jpg" alt = "I am a super serious person" height = "200px" width = "250px">
 		</p>
 </div>
-	
-</div> <!-- end of bigWrapper div -->	
-<!-- ---------------------------------------------------------------------------------  -->	
-<script src="script.js"></script> 
-	
+
+</div> <!-- end of bigWrapper div -->
+<!-- ---------------------------------------------------------------------------------  -->
+<script src="script.js"></script>
+
 </body>
 </html>
