Oops, iFrame's javascript messes with my menu code.

--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
     <table class = "projectsTable" style="width:100%">
     	<tr>
     		<td>
-    			<!-- <a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"><img src = "projectPics/leap.jpg" alt = "Leap Motion Project" width = "80%"></a> -->
-             <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe>
+    			<a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"><img src = "projectPics/leap.jpg" alt = "Leap Motion Project" width = "80%"></a>
+             <!-- <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe> -->
     		</td>
     		<td>
     			<p>  <a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"> Experimental Leap Motion + D3.js project. </a>
 		        	<ul>
 		        		<li>Wave your hands around and watch D3.js mirror you!</li>
 		        		<li>In the future I plan on implementing ways to interact with D3 visualizations by recognizing gestures using machine learning algorithms.</li>
-                  <!-- <li><a href= "https://www.youtube.com/watch?v=yttEEA-Gd2A">Video of it in action</a> for if you don't have a Leap.</li> -->
+                  <li><a href= "https://www.youtube.com/watch?v=yttEEA-Gd2A">Video of it in action</a> for if you don't have a Leap.</li>
 		        		<li><strong>Note:</strong> When using, start by waving your hands around above the Leap Motion device and watch it calibrate!</li>
 		        	</ul>
 	        	</p>
