added a tabicon image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   	<title>Nick Strayer's Silly Website</title>
   	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   	<link rel="stylesheet" type="text/css" href="myStyle.css">
-
+    <link rel="icon" href="images/icon.ico"/>
   </head>
   <body>
 
@@ -298,6 +298,11 @@
 		<img src = "lawQuad.jpg" alt = "I am a super serious person" height = "200px" width = "250px">
 		</p>
 </div>
+
+
+                  </nstrayer>
+
+
 
 </div> <!-- end of bigWrapper div -->
 <!-- ---------------------------------------------------------------------------------  -->
