Fixed some stuff with the menu, mainly the text dissapears when you click now for exit transition, also there is an enexpected fact that it makes a double layer menu when mousing over the actual text, I like it and am going to keep it though

--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@
     		</td>
     	</tr>
 
+        <tr>
+            <td>
+                <a href = "http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank"><img src = "projectPics/labInTheWild.jpg" alt = "Lab In The Wild Project" width = "80%"></a>
+            </td>
+            <td>
+                <p> <a href = "http://www.labinthewild.org/studies/visualization/" target="_blank"> labinthewild.org Interactive Visualization. </a>
+                    <ul> <li>A visualization developed for LabInTheWild at the University of Michigan to help participants place themselves among differing demographics.</li>
+                    </ul>
+                </p>
+            </td>
+        </tr>
+        
     	<tr>
     		<td>
     			<a href = "http://www.uvm.edu/~nstrayer/fillingStations" target="_blank"><img src = "projectPics/fillingStations.jpg" alt = "Alt Fuel Filling Stations" width = "80%"></a>
@@ -264,17 +276,6 @@
     		</td>
     	</tr>
 
-    	<tr>
-    		<td>
-    			<a href = "http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank"><img src = "projectPics/labInTheWild.jpg" alt = "Lab In The Wild Project" width = "80%"></a>
-    		</td>
-    		<td>
-			    <p> <a href = "http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank"> labinthewild.org Interactive Visualization. </a>
-			        <ul> <li>A visualization developed for LabInTheWild at the University of Michigan to help participants place themselves among differing demographics.</li>
-			        </ul>
-		        </p>
-    		</td>
-    	</tr>
     </table>
 
 
