added new intro style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </div>
 
 <!-- ---------------------------------------------------------------------------------  -->
-<div id="meDiv" class="sectionDivs">
+<div id="welcome">
+</div>
+<div id="meDiv" class="hidden sectionDivs">
         <p class = "header"> hello! </p>
         <p class = "pictures">
         <img src = "me.jpg" alt = "I am a super serious person" height = "200px" width = "250px">
@@ -239,7 +241,7 @@
                 </p>
             </td>
         </tr>
-        
+
     	<tr>
     		<td>
     			<a href = "http://www.uvm.edu/~nstrayer/fillingStations" target="_blank"><img src = "projectPics/fillingStations.jpg" alt = "Alt Fuel Filling Stations" width = "80%"></a>
