Added sign language app to projects

--- a/index.html
+++ b/index.html
@@ -199,7 +199,23 @@
     <p class = "header"> projects </p>
 
     <table class = "projectsTable" style="width:100%">
-    	<tr>
+        <tr>
+            <td>
+                <a href = "http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"><img src = "projectPics/signLanguage.jpg" alt = "Leap Motion Project" width = "80%"></a>
+                <!-- <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe> -->
+            </td>
+            <td>
+                <p>  <a href = "http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"> Learn ASL numbers with Leap Motion. </a>
+                    <ul>
+                        <li>Teaches numbers 0-9 in American Sign Language.</li>
+                        <li>Utilizes three.js and openGL for rendering.</li>
+                        <li>Built to exploit multiple HCI and Cognitive Psychology theories (e.g. Object consistancy and the generation effect) in order to maximize learning experience.</li>
+                    </ul>
+                </p>
+            </td>
+        </tr>
+
+        <tr>
     		<td>
     			<a href = "http://www.uvm.edu/~nstrayer/leapD3" target="_blank"><img src = "projectPics/leap.jpg" alt = "Leap Motion Project" width = "80%"></a>
              <!-- <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe> -->
