Added info about winning UVM CS Fair and fixed some weird typography things.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </p>
         <p>My interests lie in the utilization of the incredible power that modern <strong>data</strong> affords us to help better the world.</p>
 		<p>I don't think that one should need a degree in a STEM field to be able to benefit from this data. Due to this, one of my main interests is visualizing data to accurately reflect the underlying trends without all of the fluff that data scientists love to layer on.</p>
-		<p>When I am not in "school mode" I love to bike places and appreciate architecture whilst doing so.</p>
+		<p>My current research interests include: <strong>statistical genetics</strong>, <strong>data visualization</strong> and <strong>mathematical biology/ ecology modeling</strong>.</p>
+        <p>When I am not in "school mode" I love to bike places and appreciate architecture whilst doing so.</p>
 		<p>Have a fantastic day!</p>
 </div>
 
@@ -151,6 +152,7 @@
 	<li>JQuery ***</li>
 	<li>Angular.js *</li>
 	<li>D3.js ***</li>
+    <li>three.js*</li>
 	</ul>
 	</li>
 	<li>Matlab ***</li>
@@ -185,7 +187,13 @@
 	 <!-- closes the Honors and Scholarships -->
 	<div>
 	<ul>
-	<li>One of three Nominated for Goldwater Scholarship national level, Presidential Scholarship, Honors College Dean's Scholarship, URECA summer research scholarship, UVM Office of Undergraduate Research Summer Mini Grant recipient, and James Buxton Scholarship.</li>
+        <li>First place project (among 200+ projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
+    	<li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
+        <li>Presidential Scholarship </li>
+        <li>Honors College Dean's Scholarship </li>
+        <li>URECA summer research scholarship </li>
+        <li>UVM Office of Undergraduate Research Summer Mini Grant recipient </li>
+        <li>and James Buxton Scholarship.</li>
 	</ul>
 	</div> <!-- closes the honors and scholarships div -->
 
@@ -202,14 +210,14 @@
         <tr>
             <td>
                 <a href = "http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"><img src = "projectPics/signLanguage.jpg" alt = "Leap Motion Project" width = "80%"></a>
-                <!-- <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe> -->
             </td>
             <td>
                 <p>  <a href = "http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"> Learn ASL numbers with Leap Motion. </a>
                     <ul>
+                        <li>First place project at 2014 UVM CS Fair.</li>
                         <li>Teaches numbers 0-9 in American Sign Language.</li>
-                        <li>Utilizes three.js and openGL for rendering.</li>
-                        <li>Built to exploit multiple HCI and Cognitive Psychology theories (e.g. Object consistancy and the generation effect) in order to maximize learning experience.</li>
+                        <li>Utilizes three.js and webGL for rendering.</li>
+                        <li>Built to exploit multiple HCI and Cognitive Psychology theories (e.g. object consistancy and the generation effect) in order to maximize learning experience.</li>
                     </ul>
                 </p>
             </td>
