Fixed project count in resume.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	 <!-- closes the Honors and Scholarships -->
 	<div>
 	<ul>
-        <li>First place project (among 200+ projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
+        <li>First place project (among 163 projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
     	<li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
         <li>Presidential Scholarship </li>
         <li>Honors College Dean's Scholarship </li>
