added dealer.com position and changed mct to conduce.

--- a/index.html
+++ b/index.html
@@ -64,75 +64,82 @@
 
 	<!-- Experience -->
 	<div>
-	<ul>
-	<li><strong>Software Engineering Intern</strong>, Mission Control Technologies, <em>Carpinteria, CA</em> [Summer 2014]:
-	<ul>
-	<li>Self directed project to bring the latest JavaScript visualization technologies to the company's main software platform.</li>
-	<li>Fully envisioned, prototyped and implemented new data visualization framework in the course of one month.</li>
-	<li>Constructed training protocol for rapidly bringing third parties up to speed with new protocol.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Human Computer Interaction Researcher</strong>, LabInTheWild (University of Michigan) [Summer 2014]:
-	<ul>
-	<li>In charge of developing and implementing interactive data visualizations to help users compare themselves to other demographics.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Undergraduate Researcher</strong>, Rubenstein Lab [2013 to Pres.]:
-	<ul>
-	<li>Analyzed and visualized data for CATOS fish tracking project.</li>
-	<li>Head of data mining project to establish temporal trends in population densities of <em>Mysis diluviana</em>.</li>
-	<li>Running project to mathematically model the migration patterns of <em>Mysis diluviana</em> (honors thesis project.)</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Undergraduate Researcher</strong>, Bentil Laboratory [2013 to Pres.]:
-	<ul>
-	<li>Developing mathematical model to predict the transport of sulfur through the environment with applications in waste cleanup.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Research Assistant</strong>, Adair Laboratory [2012 to '13']:
-	<ul>
-	<li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon decomposition rates.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Mathematics, Statistics and Chemistry Tutor</strong>, University of Vermont [2013 to Pres.]:
-	<ul>
-	<li>Tutor students seeking assistance in introductory to intermediate classes.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Computer Technician Intern</strong>, Logic Supply, <em>Burlington, VT</em> [2012 to '13]:
-	<ul>
-	<li>Involved in all roles of assembly and stress testing of computer systems.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Baker</strong>, Zingerman's Bakehouse, <em>Ann Arbor, MI</em> [2009 to '12]:
-	<ul>
-	<li>Responsible for production of bread in all stages.</li>
-	<li>Trained new employees.</li>
-	</ul>
-	</li>
-	</ul>
-	<ul>
-	<li><strong>Founding Member and Treasurer</strong>, UVM Olympic Weightlifting Team:
-	<ul>
-	<li>Co-founded UVM's first weightlifting club sports team.</li>
-	<li>Responsible for design and implementation of $20,000+ budget.</li>
-	</ul>
-	</li>
-	</ul>
+        <ul>
+            <li><strong>Engineering Intern - User Experience</strong>, Dealer.com, <em>Burlington, VT</em> [Jan 2015 to Pres.]:
+                <ul>
+                    <li>Working to help analyze and visualize user interaction with backend products.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Software Engineering Intern</strong>, Conduce, <em>Carpinteria, CA</em> [Summer 2014]:
+                <ul>
+                    <li>Self directed project to bring the latest JavaScript visualization technologies to the company's main software platform.</li>
+                    <li>Fully envisioned, prototyped and implemented new data visualization framework in the course of one month.</li>
+                    <li>Constructed training protocol for rapidly bringing third parties up to speed with new protocol.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Human Computer Interaction Researcher</strong>, LabInTheWild (University of Michigan) [Summer 2014]:
+                <ul>
+                    <li>In charge of developing and implementing interactive data visualizations to help users compare themselves to other demographics.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Undergraduate Researcher</strong>, Rubenstein Lab [2013 to Pres.]:
+                <ul>
+                    <li>Analyzed and visualized data for CATOS fish tracking project.</li>
+                    <li>Head of data mining project to establish temporal trends in population densities of <em>Mysis diluviana</em>.</li>
+                    <li>Running project to mathematically model the migration patterns of <em>Mysis diluviana</em> (honors thesis project.)</li>
+                </ul>
+	        </li>
+	    </ul>
+        <ul>
+            <li><strong>Undergraduate Researcher</strong>, Bentil Laboratory [2013 to Pres.]:
+                <ul>
+                    <li>Developing mathematical model to predict the transport of sulfur through the environment with applications in waste cleanup.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Research Assistant</strong>, Adair Laboratory [2012 to '13']:
+                <ul>
+                    <li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon decomposition rates.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Mathematics, Statistics and Chemistry Tutor</strong>, University of Vermont [2013 to Pres.]:
+                <ul>
+                    <li>Tutor students seeking assistance in introductory to intermediate classes.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Computer Technician Intern</strong>, Logic Supply, <em>Burlington, VT</em> [2012 to '13]:
+                <ul>
+                    <li>Involved in all roles of assembly and stress testing of computer systems.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Baker</strong>, Zingerman's Bakehouse, <em>Ann Arbor, MI</em> [2009 to '12]:
+                <ul>
+                    <li>Responsible for production of bread in all stages.</li>
+                    <li>Trained new employees.</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Founding Member and Treasurer</strong>, UVM Olympic Weightlifting Team:
+                <ul>
+                    <li>Co-founded UVM's first weightlifting club sports team.</li>
+                    <li>Responsible for design and implementation of $20,000+ budget.</li>
+                </ul>
+            </li>
+        </ul>
 
 
 	</div> <!-- Break of experience subdiv -->
