Added manhattan plot viewer

--- a/index.html
+++ b/index.html
@@ -216,6 +216,22 @@
     <table class = "projectsTable" style="width:100%">
         <tr>
             <td>
+                <a href = "http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"><img src = "projectPics/manhattanPlots.png" alt = "Manhattan Plots Viewer" width = "80%"></a>
+            </td>
+            <td>
+                <p>  <a href = "http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"> Interactive Manhattan Plot Viewer </a>
+                    <ul>
+                        <li>Developed as an experiment in exploratory data visualization.</li>
+                        <li>Select different controls for comparison, e.g. non-dominant arm growth to see linked snps.</li>
+                        <li>A manhattan plot is a commonly used tool in accessing genetic roots for traits</li>
+                        <li>Uses data from the FAMuSS study (<a href = "http://isites.harvard.edu/fs/docs/icb.topic1388631.files/thompson_FAMuSS.pdf" target = "_blank"> Thompson Et Al. 2004</a>).</li>
+                    </ul>
+                </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
                 <a href = "http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"><img src = "projectPics/signLanguage.jpg" alt = "Leap Motion Project" width = "80%"></a>
             </td>
             <td>
